sets up scss and install countdown clock

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./styles/styles.scss";
+
 .App {
   text-align: center;
 }
@@ -20,8 +22,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: $primaryFont;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $primaryColor;
 }
 
 .App-link {
