--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,4 +1,4 @@
-@import "./styles/styles.scss";
+@import "../styles/styles.scss";
 
 
 .App-header {
@@ -13,7 +13,22 @@
   color: $primaryColor;
 }
 
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+}
 
+.App-main {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-evenly;
+  align-items: center;
+}
 
 @keyframes App-logo-spin {
   from {
