changes props to assign judges and debators on App component

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,1 +1,3 @@
-$headerFont : Serial Publication, serif;
+$headerFont : 'Serial Publication', serif;
+$primaryFont : 'Patua One';
+$bodyFont : 'Roboto', sans-serif;
