--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,5 +1,51 @@
 @import "../styles/styles.scss";
 
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $background;
+  height: 100%;
+  width: 100%;
+}
+
+.instructions, .winners, .splash {
+  height: 100vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: $offwhite;
+  z-index: 1;
+}
+
+.splash {
+  font-family: $headerFont;
+  font-size: 12vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 5px solid black;
+  background-color: $offwhite;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 40vh;
+  -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+
+a {
+  font-size: 3vh;
+}
 
 .App-header {
   background-color: #282c34;
