--- a/src/Debate/Debate.scss
+++ b/src/Debate/Debate.scss
@@ -1,11 +1,27 @@
 @import "../styles/styles.scss";
 
+// div {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   background-color: darkblue;
+//   height: 100%;
+//   width: 100%;
+// }
+
+h2 {
+ font-size: 40%;
+ position: relative;
+}
+
 .debate {
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: $offwhite;
+  z-index: 1;
 }
 
 .debator {
@@ -47,15 +63,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 450px;
-  width: 450px;
+  height: 400px;
+  width: 400px;
   background-color: cornflowerblue;
   border-radius: 50%;
   position: relative;
+  margin-top: 10%;
 }
 
 .topic-two-card {
   background-color: darkred;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .judges-box {
@@ -100,7 +121,6 @@
 .clock {
   min-width: 200px;
   max-height: 100vh;
-  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -108,7 +128,10 @@
 }
 
 .react-countdown-clock {
+  background-color: white;
+  border-radius: 50%;
   z-index: 2;
+  opacity: 85%;
   width: 100vw;
   position: relative;
 }
