--- a/src/Debate/Debate.scss
+++ b/src/Debate/Debate.scss
@@ -16,7 +16,7 @@ h2 {
 
 .debate {
   height: 100vh;
-  width: 80vw;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,12 +36,12 @@ h2 {
 .debator-names {
   font-family: $headerFont;
   height: 10vh;
-  width: 80vw;
+  width: 90vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-left: 10vw;
+  margin-left: 5vw;
   font-size: 5vh;
   border-bottom: 5px solid black;
 }
@@ -49,13 +49,13 @@ h2 {
 .debate-stage {
   font-family: $bodyFont;
   height: 55vh;
-  width: 80vw;
+  width: 90vw;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   font-size: 5vh;
-  margin-left: 10vw;
+  margin-left: 5vw;
 }
 
 .topic-one-card, .topic-two-card {
@@ -63,8 +63,8 @@ h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
   background-color: cornflowerblue;
   border-radius: 50%;
   position: relative;
@@ -116,6 +116,14 @@ h2 {
   justify-content: center;
   align-items: center;
   width: inherit;
+}
+
+.player-one-name {
+  margin-right: 10vw;
+}
+
+.player-two-name {
+  margin-left: 10vw;
 }
 
 .clock {
