Improves styling for forms and buttons

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -11,7 +11,7 @@ div, .error-page {
 
 .instructions, .winners, .splash {
   height: 100vh;
-  width: 80vw;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,20 +31,25 @@ div, .error-page {
   background-color: $offwhite;
 }
 
-.card {
+.card, button, a {
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: white;
-  height: 40vh;
+  border: 1px solid black;
+  height: fit-content;
   -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
   box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
 
-a {
-  font-size: 3vh;
+button, a {
+  height: 10vh;
+  width: 20vw;
+  font-size: 5vh;
+  font-style: $bodyFont;
 }
 
 .App-header {
@@ -67,6 +72,15 @@ nav {
   width: 100vw;
 }
 
+.rules {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  width: fit-content;
+}
+
 .App-main {
   height: 100vh;
   width: 100vw;
@@ -76,11 +90,3 @@ nav {
   align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
