--- a/src/Vote/Vote.scss
+++ b/src/Vote/Vote.scss
@@ -1,16 +1,52 @@
+@import "../styles/styles.scss";
+
 .votes {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  justify-content: space-evenlyg;
+  margin-top: 3vh;
   width: 80vw;
-  border-bottom: 5px solid black;
-  background-color: white;
 }
 
 .vote {
+  margin-top: 30vh;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
+  border: 1px solid black;
+  height: 40vh;
+  width: 20vw;
+  -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+
+.vote-page {
+  height: 100vh;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: $offwhite;
+  overflow: hidden;
+}
+
+button, a {
+  height: 5vh;
+  width: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 3px;
+  font-size: large;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
