--- a/src/Vote/Vote.scss
+++ b/src/Vote/Vote.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenlyg;
+  justify-content: space-evenly;
   margin-top: 3vh;
   width: 80vw;
 }
