--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,74 +1,80 @@
 @import "../styles/styles.scss";
 
-div, .error-page {
-  display: flex;
-  flex-direction: column;
+div,
+.error-page {
   align-items: center;
   background-color: $background;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
 }
 
-.instructions, .winners, .splash {
-  height: 100vh;
-  width: 90vw;
+.instructions,
+.winners,
+.splash {
+  align-items: center;
+  background-color: $offwhite;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100vh;
   justify-content: center;
-  background-color: $offwhite;
+  width: 90vw;
   z-index: 1;
 }
 
 .splash {
+  align-items: center;
+  background-color: $offwhite;
+  border-bottom: 5px solid black;
+  display: flex;
+  flex-direction: column;
   font-family: $headerFont;
   font-size: 12vh;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  border-bottom: 5px solid black;
-  background-color: $offwhite;
 }
 
-.card, button, a {
+.card,
+button,
+a {
   color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -moz-box-shadow: 3px 5px 5px 3px #ccc; /* Firefox 3.5 - 3.6 */
+  -webkit-box-shadow: 3px 5px 5px 3px #ccc; /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   align-items: center;
   background-color: white;
   border: 1px solid black;
+  box-shadow: 3px 5px 5px 3px #ccc; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  display: flex;
+  flex-direction: column;
   height: fit-content;
-  -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  justify-content: center;
 }
 
-button, a {
-  height: 10vh;
-  width: 20vw;
+button,
+a {
   font-size: 5vh;
   font-style: $bodyFont;
+  height: 10vh;
+  width: 20vw;
 }
 
 .App-header {
+  align-items: center;
   background-color: #282c34;
-  min-height: 100vh;
+  color: $primaryColor;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-family: $headerFont;
   font-size: calc(10px + 2vmin);
-  color: $primaryColor;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 nav {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   width: 100vw;
 }
 
@@ -82,11 +88,9 @@ nav {
 }
 
 .App-main {
-  height: 100vh;
-  width: 100vw;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  // justify-content: space-evenly;
-  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
-
