--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,4 @@
 @import "./colors.scss";
 @import "./fonts.scss";
+@import '/Users/cwefso/projects/debatable-practice/src/styles/_colors.scss';
+@import '/Users/cwefso/projects/debatable-practice/src/styles/_fonts.scss';
