--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,8 +1,14 @@
 @import '/Users/cwefso/projects/debatable-practice/src/styles/_colors.scss';
 @import '/Users/cwefso/projects/debatable-practice/src/styles/_fonts.scss'; // assuming a styles directory under src/
 
-.App {
+.App-main {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: black;
 }
 
 .App-logo {
@@ -22,35 +28,43 @@
   color: white;
 }
 
-button {
-  opacity: 100%;
+.instructions, .error-page {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  width: 90vw;
 }
 
-.logo, .buttons {
+.card {
+  background-color: white;
+  padding: 2em;
+  border-radius: 3px;
+  box-shadow: $glow-white;
+}
+
+.logo {
 display: flex;
 flex-direction: row;
-justify-content: space-evenly;
+justify-content: center;
 align-items: center;
 width: 100vw;
 }
 
 .logo {
-  margin-top: 10vh;
   height: 60vh;
   font-family: $header;
   font-size: 4.75em;
   text-shadow: $glow-white;
 }
 
-.buttons {
-  width: 100vw;
-  height: 30vh;
-}
-
 button {
   padding: 0;
   border: none;
   background: none;
+  opacity: 100%;
 }
 
 .start {
