--- a/src/Names/Names.scss
+++ b/src/Names/Names.scss
@@ -5,9 +5,17 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
-  justify-content: center;
-  margin-top: 3vh;
   width: fit-content;
+}
+
+.main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  width: 90vw;
 }
 
 .name-page {
@@ -17,23 +25,17 @@
   flex-direction: column;
   height: 100vh;
   overflow: hidden;
-  width: 90vw;
 }
 
 .name-card {
-  align-items: center;
-  background-color: white;
-  border: 1px solid black;
-  box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-  -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
-  -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  color: black;
   display: flex;
   flex-direction: column;
-  height: fit-content;
-  justify-content: center;
-  margin-top: 30vh;
-  width: 40vh;
+  justify-content: space-evenly;
+  background-color: white;
+  padding: 2em;
+  border-radius: 3px;
+  box-shadow: $glow-white;
+  min-height: 358.8px;
 }
 
 input {
@@ -42,9 +44,14 @@ input {
   width: 20vw;
 }
 
-a {
-  height: 4vh;
-  font-size: 3vh;
-  font-style: $bodyFont;
-  width: 10vw;
-}
+// a {
+//   height: 4vh;
+//   font-size: 3vh;
+//   font-style: $bodyFont;
+//   width: 10vw;
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: center;
+//   margin-top: 13%;
+// }
