--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -2,17 +2,23 @@
 
 nav {
   align-items: baseline;
-  background-color: white;
   border-bottom: 5px solid black;
-  border-top: 3vh solid white;
+  border-top: 3vh solid black;
   display: flex;
   flex-direction: row;
-  font-family: $headerFont;
-  font-size: 7vh;
+  font-family: $header;
+  font-size: 10vh;
   justify-content: center;
   width: 90vw;
 }
 
-.stars {
-  height: 5vh;
-}
+.nav-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100vw;
+    font-family: $header;
+    color: $main;
+    text-shadow: $glow-white;
+  }
