--- a/src/Vote/Vote.scss
+++ b/src/Vote/Vote.scss
@@ -18,11 +18,9 @@
   flex-direction: column;
   height: 40vh;
   justify-content: space-evenly;
-  margin-top: 30vh;
+  margin-top: 20vh;
   width: 20vw;
-  -webkit-box-shadow: 3px 5px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    3px 5px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         3px 5px 5px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  border-radius: 3px;
 }
 
 .vote-page {
@@ -32,18 +30,18 @@
   flex-direction: column;
   height: 100vh;
   overflow: hidden;
-  width: 90vw;
+  width: 100vw;
 }
 
-button, a {
-  border-radius: 3px;
-  font-size: large;
-  height: 5vh;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 100%;
-  height: fit-content;
-}
+// button, a {
+//   border-radius: 3px;
+//   font-size: large;
+//   height: 5vh;
+//   margin-left: 10%;
+//   margin-right: 10%;
+//   width: 100%;
+//   height: fit-content;
+// }
 
 main {
   align-items: center;
