--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -33,9 +33,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
   overflow: hidden;
-  width: 90vw;
+  width: 100vw;
 }
 
 .card {
@@ -43,6 +43,12 @@
   padding: 2em;
   border-radius: 3px;
   box-shadow: $glow-white;
+  height: 30vh;
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo {
@@ -72,6 +78,52 @@ button {
   font-size: 2em;
   text-shadow: $glow-green;
   color: $green;
+}
+
+.winners {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 90vh;
+  overflow: hidden;
+  width: 100vw;
+  font-family: $body;
+  font-size: 2em;
+  text-shadow: $glow-green;
+  color: $green;
+  background-color: black;
+}
+
+.wins-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.winners-page {
+  align-items: center;
+  background-color: $main;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+  width: 100vw;
+}
+
+.restart-button {
+  border-radius: 3px;
+  font-size: xxx-large;
+  height: 5vh;
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5vh;
+  color: white;
 }
 
 @media only screen and (max-width: 600px) {
