--- a/src/Vote/Vote.scss
+++ b/src/Vote/Vote.scss
@@ -18,10 +18,16 @@
   flex-direction: column;
   height: 40vh;
   justify-content: space-evenly;
-  margin-top: 20vh;
   width: 20vw;
   border-radius: 3px;
 }
+
+h2 {
+  font-size: xxx-large;
+  position: relative;
+  color: $main;
+ //  text-shadow: $glow-white;
+ }
 
 .vote-page {
   align-items: center;
@@ -33,19 +39,27 @@
   width: 100vw;
 }
 
-// button, a {
-//   border-radius: 3px;
-//   font-size: large;
-//   height: 5vh;
-//   margin-left: 10%;
-//   margin-right: 10%;
-//   width: 100%;
-//   height: fit-content;
-// }
+.vote-button {
+  border-radius: 3px;
+  font-size: xxx-large;
+  height: 5vh;
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5vh;
+  color: white;
+}
 
 main {
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+button {
+  padding: 2em;
 }
