--- a/src/Debate/Debate.scss
+++ b/src/Debate/Debate.scss
@@ -9,12 +9,12 @@
 //   width: 100%;
 // }
 
-h2 {
- font-size: 40%;
- position: relative;
- color: $main;
-//  text-shadow: $glow-white;
-}
+// h2 {
+//  font-size: 40%;
+//  position: relative;
+//  color: $main;
+// //  text-shadow: $glow-white;
+// }
 
 .debate {
   align-items: center;
@@ -122,6 +122,7 @@ h2 {
   width: inherit;
   text-shadow: $glow-blue;
   color: $blue;
+  margin-bottom: 12%;
 }
 
 .player-two-name {
